[package]
name = "refrigerator-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
synstructure = "0.13.2"

[dev-dependencies]
prettyplease = "0.2.35"
refrigerator = { path = "../refrigerator" }
