[package]
name = "vdso-rng"
version = "0.1.0"
edition = "2024"


[dependencies]
linux-raw-sys = { version = "0.10.0", default-features = false, features = ["core", "elf", "elf_uapi", "general", "no_std", "prctl", "errno"] }
syscalls = { version = "0.6.18", default-features = false }
rustix-futex-sync = "0.4.0"

[[bench]]
name = "rng-bench"
harness = false

[dev-dependencies]
criterion = "0.6.0"
rayon = "1.10.0"
rand = "0.9.1"
rustix = { version = "1.0.7", default-features = false, features = ["rand"] }
