[package]
name = "vdso-rng"
version = "0.1.0"
edition = "2024"


[dependencies]
linux-raw-sys = { version = "0.10.0", default-features = false, features = ["core", "elf", "elf_uapi", "general", "no_std", "prctl", "errno"] }
syscalls = { version = "0.6.18", default-features = false }
lamlock = { path = "../lamlock"}
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc"] }

[[bench]]
name = "rng-bench"
harness = false

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
rayon = "1.10.0"
rustix = { version = "1.0.7", default-features = false, features = ["rand"] }
