[package]
name = "vdso-rng"
version = "0.2.0"
edition = "2024"
authors = ["schrodingerzhu <yifanzhu@rochester.edu>"]
description = "A Rust wrapper around the Linux vDSO random number generator."
license = "MIT OR Apache-2.0"
keywords = ["vDSO", "linux", "random", "synchronization"]
categories = ["concurrency", "data-structures", "no-std"]
homepage = "https://github.com/schrodingerzhu/useless"
repository = "https://github.com/schrodingerzhu/useless"
readme = "README.md"

[dependencies]
linux-raw-sys = { version = "0.10.0", default-features = false, features = [
    "core",
    "elf",
    "elf_uapi",
    "general",
    "no_std",
    "prctl",
    "errno",
] }
syscalls = { version = "0.6.18", default-features = false }
lamlock = { path = "../lamlock", version = "0.2.0" }
crossbeam-queue = { version = "0.3.12", default-features = false, features = [
    "alloc",
] }

[[bench]]
name = "rng-bench"
harness = false

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"
rand_chacha = { version = "0.9.0", features = ["os_rng"] }
rayon = "1.10.0"
rustix = { version = "1.0.7", default-features = false, features = ["rand"] }
